src/styles/globals.css
@import "tailwindcss";

:root {
  --background: #0a0a0a;
  --foreground: #ededed;
  --theme-pink: #ff39e1;
  --theme-green: #d3ff7d;

  /* Text size variables - mobile first */
  --text-base: 1rem;
  --text-md: 1.25rem;
  --text-lg: 1.5rem;
  --text-xl: 2.5rem;
  --text-2xl: 2.5rem;

  --margin: 1rem;
  --gutter: 1rem;
  --nav-height: 3rem;
}

@media (width >= 768px) {
  :root {
    --text-base: 1.5rem;
    --text-md: 2.5rem;
    --text-lg: 3rem;
    --text-lg--line-height: 1;
    --text-xl: 4rem;
    --text-2xl: 4.5rem;
    --margin: 2.5rem;
    --gutter: 1.25rem;
    --nav-height: 3.5rem;
  }
}

@media (width >= 1280px) {
  :root {
    --margin: 5rem;
    --gutter: 1.25rem;
  }
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-dm);
  --font-custom: var(--font-universCondensed);
  --font-display: var(--font-clash);
  --font-Haas: var(--font-Haas);
  --color-theme-green: var(--theme-green);
  --color-theme-pink: var(--theme-pink);
  --spacing-margin: var(--margin);
  --spacing-gutter: var(--gutter);
}

html {
  background: var(--background);
  color: var(--foreground);
  -webkit-overflow-scrolling: touch;
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: Arial, Helvetica, sans-serif;
}

@utility grid-cols-theme {
  @apply grid gap-x-gutter grid-cols-4 md:grid-cols-8 xl:grid-cols-12 auto-rows-min;
}

/* Infinite marquee animation */
@keyframes marquee {
  0% {
    transform: translateX(0%);
  }
  100% {
    transform: translateX(-50%);
  }
}

@keyframes marqueeRight {
  0% {
    transform: translateX(-50%);
  }
  100% {
    transform: translateX(0%);
  }
}

.animate-marquee {
  animation: marquee 50s linear infinite;
}

.animate-marquee-right {
  animation: marqueeRight 50s linear infinite;
}

html.lenis,
html.lenis body {
  height: auto;
  /* height: 100dvh; */
  /* position: relative; */
}

.lenis:not(.lenis-autoToggle).lenis-stopped {
  overflow: clip;
}

.lenis [data-lenis-prevent],
.lenis [data-lenis-prevent-wheel],
.lenis [data-lenis-prevent-touch] {
  overscroll-behavior: contain;
}

.lenis.lenis-smooth iframe {
  pointer-events: none;
}

.lenis.lenis-autoToggle {
  transition-property: overflow;
  transition-duration: 1ms;
  transition-behavior: allow-discrete;
}

